Changed the executionable.

--- a/usr/applications/MuMuh.desktop
+++ b/usr/applications/MuMuh.desktop
@@ -6,7 +6,7 @@ Comment=Manjaro Universal Update Helper
 # The path to the folder in which the executable is run
 Path=/tmp
 # The executable of the application, possibly with arguments.
-Exec=/usr/bin/system_update_script.sh %U
+Exec=bash /usr/bin/system_update_script.sh %U
 # The name of the icon that will be used to display this entry
 Icon=manjaro
 # Describes whether this application needs to be run in a terminal or not
